# STM32FirstSteps

./: .cproject  .gitignore  .gitmodules  .mxproject  .project  CMakeLists.txt  CMakePresets.json  STM32FirstSteps Debug.launch  STM32FirstSteps.ioc
Core/: CMakeLists.txt
Core/Inc/: board.hpp  main.h  main.hpp  stm32f4xx_hal_conf.h  stm32f4xx_it.h
Core/Src/: main.c  main.cpp  stm32f4xx_hal_msp.c  stm32f4xx_it.c
app/embedded/: CMakeLists.txt  project.xml
app/embedded/modm/: gdbinit_jlink
app/embedded/modm/docs/: README.md  custom.css  doxyfile.cfg  doxypress.json  footer.html
app/embedded/modm/docs/dox/: modm-architecture-accessor.dox  modm-architecture-assert.dox  modm-architecture-delay.dox  modm-architecture-gpio.dox  modm-architecture-interrupt.dox  modm-architecture.dox  modm-cmsis-core.dox  modm-cmsis-device.dox  modm-io.dox  modm-math-units.dox  modm-platform-heap.dox  modm-platform.dox  modm-processing.dox  modm-stdc--.dox  modm-stdc.dox
app/embedded/modm/ext/gcc/: cxxabi.cpp  new_delete.cpp
app/embedded/modm/ext/printf/: printf_config.h
app/embedded/modm/modm_tools/: __init__.py  build_id.py  crashdebug.py  elf2uf2.py  find_files.py  gdb.py  jlink.py
app/embedded/modm/src/modm/architecture/: interface.hpp
app/embedded/modm/src/modm/architecture/interface/: accessor.hpp  accessor_flash.hpp  accessor_ram.hpp  assert.hpp  gpio.hpp  interrupt.hpp  peripheral.hpp
app/embedded/modm/src/modm/platform/clock/: rcc.cpp
app/embedded/modm/src/modm/platform/core/: atomic_lock_impl.hpp  delay.cpp  delay_impl.hpp  hardware_init.hpp  peripherals.hpp  startup.c
app/embedded/modm/src/modm/platform/gpio/: data.hpp  enable.cpp  pins.hpp  unused.hpp
app/embedded/modm/src/modm/processing/timer/: periodic_timer.hpp  timeout.hpp  timestamp.hpp
app/embedded/modm/src/modm/utils/: aligned_storage.hpp  inplace_function.hpp
app/embedded/src/: main.cpp
app/googletest/: CMakeLists.txt
app/googletest/src/: main.cpp
app/modm_test/: CMakeLists.txt  project.xml
app/modm_test/board/: board.cpp  board.hpp
app/modm_test/modm/: CMakeLists.txt  gdbinit_bmp  gdbinit_openocd  openocd.cfg
app/modm_test/modm/cmake/: ModmConfiguration.cmake
app/modm_test/modm/docs/dox/: modm-architecture-atomic.dox  modm-architecture-register.dox  modm-architecture-uart.dox  modm-board-nucleo-f446ze.dox  modm-board.dox  modm-build-cmake.dox  modm-build.dox  modm-debug.dox  modm-docs.dox  modm-freertos.dox  modm-math-utils.dox  modm-math.dox  modm-platform-cortex-m.dox  modm-platform-gpio.dox  modm-platform-itm.dox  modm-platform-rcc.dox  modm-platform-uart-3.dox  modm-platform-usb-fs.dox  modm-platform-usb.dox  modm-printf.dox  modm-processing-timer.dox  modm-utils.dox
app/modm_test/modm/ext/freertos/: modm_port.cpp
app/modm_test/modm/ext/freertos/inc/freertos/: FreeRTOSConfig.h
app/modm_test/modm/link/: linkerscript.ld
app/modm_test/modm/modm_tools/: bmp.py  itm.py  openocd.py  rtt.py  size.py  utils.py
app/modm_test/modm/src/modm/: math.hpp  platform.hpp
app/modm_test/modm/src/modm/architecture/: utils.hpp
app/modm_test/modm/src/modm/architecture/interface/: clock.hpp  memory.hpp  register.hpp
app/modm_test/modm/src/modm/io/: iostream_printf.cpp
app/modm_test/modm/src/modm/math/utils/: bit_constants.hpp  bit_operation.hpp  integer_traits.hpp
app/modm_test/modm/src/modm/platform/clock/: rcc.hpp  systick_timer.hpp
app/modm_test/modm/src/modm/platform/core/: assert.cpp  flash_reader_impl.hpp  heap_table.hpp  no_heap.c  reset_handler.sx  startup_platform.c  vectors.hpp
app/modm_test/modm/src/modm/platform/gpio/: base.hpp  port.hpp  port_shim.hpp  set.hpp  software_port.hpp  static.hpp
app/modm_test/modm/src/modm/platform/heap/: heap_newlib.cpp
app/modm_test/modm/src/modm/platform/uart/: uart_3.cpp  uart_3.hpp  uart_base.hpp
app/modm_test/modm/src/modm/processing/: rtos.hpp
app/modm_test/modm/src/modm/processing/rtos/: mutex.cpp  mutex.hpp  queue.cpp  semaphore.cpp  thread.cpp  thread.hpp
app/modm_test/modm/src/modm/processing/timer/: module.md
app/modm_test/modm/src/modm/utils/: allocator.hpp  type_traits.hpp
app/modm_test/src/: main.cpp
app/tests/: CMakeLists.txt
app/tests/src/: example.cpp  main.cpp
apps/modm_test/: CMakeLists.txt  project.xml
apps/modm_test/modm/: CMakeLists.txt  gdbinit
apps/modm_test/modm/cmake/: ModmConfiguration.cmake
apps/modm_test/modm/docs/: custom_dark_theme.css
apps/modm_test/modm/docs/dox/: modm-architecture-clock.dox  modm-architecture-delay.dox  modm-architecture-memory.dox  modm-build-cmake.dox  modm-build.dox  modm-cmsis.dox  modm-freertos.dox  modm-math-algorithm.dox  modm-platform-clock.dox  modm-platform-core.dox  modm-platform-cortex-m.dox  modm-platform-itm.dox  modm-platform-uart.dox  modm-processing-rtos.dox
apps/modm_test/modm/ext/freertos/: modm_port.cpp
apps/modm_test/modm/ext/freertos/inc/freertos/: FreeRTOSConfig.h
apps/modm_test/modm/ext/gcc/: new_delete.cpp
apps/modm_test/modm/link/: linkerscript.ld
apps/modm_test/modm/modm_tools/: backend.py
apps/modm_test/modm/src/modm/: board.hpp  platform.hpp  processing.hpp  utils.hpp
apps/modm_test/modm/src/modm/architecture/: detect.hpp  interface.hpp
apps/modm_test/modm/src/modm/architecture/interface/: assert.h  atomic_lock.hpp  delay.hpp
apps/modm_test/modm/src/modm/board/: board.cpp  board.hpp  nucleo144_arduino.hpp
apps/modm_test/modm/src/modm/io/: iostream.hpp  module.md
apps/modm_test/modm/src/modm/math/utils/: arithmetic_traits.hpp  (+3 more)
apps/modm_test/modm/src/modm/platform/: device.hpp
apps/modm_test/modm/src/modm/utils/: inplace_any.hpp
apps/modm_test/src/: main.cpp
apps/playground/: CMakeLists.txt  buildinfo.hpp.in
apps/playground/inc/: stm32f4xx_hal_conf.h  stm32f4xx_it.h
apps/playground/src/: main.cpp  syscalls.c  sysmem.c
lib/cpphalf4/: CMakeLists.txt
lib/cpphalf4/inc/: ClockConfiguration.hpp  Flash.hpp  Gpio.hpp  Nvic.hpp  Pwr.hpp  Rcc.hpp  SystemClock.hpp  Usart.hpp  generics.hpp  peripherals.hpp  stm32f4.hpp  stm32f446.hpp
lib/cpphalf4/registers/: Flash.hpp
lib/cpphalf4/src/: stm32f4.cpp  stm32f446.cpp
(+36 files in other folders)
